Fix spacing, and links

--- a/src/stylesheets/components/slices/_team.scss
+++ b/src/stylesheets/components/slices/_team.scss
@@ -1,4 +1,6 @@
 .team {
+  margin-top: 3rem;
+
   .team-member {
     margin: 0rem 0rem 2rem;
 
