--- a/src/stylesheets/pages/_index.scss
+++ b/src/stylesheets/pages/_index.scss
@@ -62,6 +62,8 @@
 
 .home-news {
   margin-bottom: 4rem;
+
+  text-align: center;
 }
 
 .home-social {
